<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_item"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BookPIC"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:contentDescription="@string/this_is_book_image"
            android:scaleType="centerCrop"
            android:src="@drawable/default_book"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/bookName" />

            <TextView
                android:id="@+id/item_bookName"
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/writer" />

            <TextView
                android:id="@+id/Writer"
                android:layout_width="match_parent"
                android:layout_height="27dp" />

        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"/>


</LinearLayout>